@@ -8,8 +8,12 @@ foo:
 	blendps		$0x0,%xmm1,%xmm0
 	blendvpd	%xmm0,(%rcx),%xmm0
 	blendvpd	%xmm0,%xmm1,%xmm0
+	blendvpd	(%rcx),%xmm0
+	blendvpd	%xmm1,%xmm0
 	blendvps	%xmm0,(%rcx),%xmm0
 	blendvps	%xmm0,%xmm1,%xmm0
+	blendvps	(%rcx),%xmm0
+	blendvps	%xmm1,%xmm0
 	dppd		$0x0,(%rcx),%xmm0
 	dppd		$0x0,%xmm1,%xmm0
 	dpps		$0x0,(%rcx),%xmm0
@@ -26,6 +30,8 @@ foo:
 	packusdw	%xmm1,%xmm0
 	pblendvb	%xmm0,(%rcx),%xmm0
 	pblendvb	%xmm0,%xmm1,%xmm0
+	pblendvb	(%rcx),%xmm0
+	pblendvb	%xmm1,%xmm0
 	pblendw		$0x0,(%rcx),%xmm0
 	pblendw		$0x0,%xmm1,%xmm0
 	pcmpeqq		%xmm1,%xmm0
