@@ -1,3 +1,9 @@
+2007-09-12  Jan Beulich  <jbeulich@novell.com>
+
+	* i386-opc.tbl: Add two-operand forms of blendvps, blendvpd, and
+	pblendvb.
+	* i386-tbl.h: Regenerate.
+
 2007-09-09  H.J. Lu  <hongjiu.lu@intel.com>
 
 	* i386-gen.c (main): Remove the local variable, unused.
